--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_IMAGES__BASE_URL=  https://pm-s3-images-nextjs.s3.us-east-2.amazonaws.com
