Added sign in sign up form

--- a/client/.env.local
+++ b/client/.env.local
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
-NEXT_PUBLIC_IMAGES__BASE_URL=  https://pm-s3-images-nextjs.s3.us-east-2.amazonaws.com
+NEXT_PUBLIC_IMAGES_BASE_URL=https://pm-s3-images-nextjs.s3.us-east-2.amazonaws.com
+NEXT_PUBLIC_COGNITO_USER_POOL_ID="us-east-2_OxpEcUUT6"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="4qar304eleoco7kt1scn4ivb0f"
